fix: fix overflowing issues on stock searching

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@ html {
 }
 
 html::-webkit-scrollbar {
-  display: none;
+  /* display: none; */
 }
 
 body {
